<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".ResetPasswordActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_toolbar"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:fontFamily="@font/roboto"
            style="@style/TextAppearance.AppCompat.Medium" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/shadow"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_warn"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_reset_pass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        app:hintEnabled="false">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_reset"
            android:textSize="16sp"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/btn_reset_password"
        android:fontFamily="@font/roboto"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>