<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".user.LoginActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="56dp">
        <TextView
            android:id="@+id/tv_login_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="Login"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            style="@style/TextAppearance.AppCompat.Medium" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/shadow"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/pb_horizontal"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_email_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        app:hintEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_login"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_password_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_login"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/tv_reset_pass_pg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:layout_weight="0"
        android:text="@string/forget_password"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_signin_email"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="14dp"
        android:layout_marginRight="72dp"
        android:background="@drawable/login"
        android:fontFamily="@font/roboto"
        android:text="@string/text_button_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/text_have_question"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/tv_link_register_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:layout_marginLeft="5dp"
            android:textColor="#FF450A"
            android:text="@string/text_register_link"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>