<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserFragment">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        app:title="@string/text_akun_appbar_name"
        app:titleTextColor="@android:color/black">
    </android.support.v7.widget.Toolbar>
    <FrameLayout
        android:id="@+id/frame_toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/shadow"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frame_toolbar_shadow"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:elevation="2dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <LinearLayout
                    android:id="@+id/ln_update_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_nama_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/text_nama_profile_display"
                        android:textColor="#6D6D6D"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_email_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/text_email_profile_display"
                        android:textColor="#6D6D6D"
                        android:textSize="14sp" />
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_profile_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_update_profile"
                    android:textSize="14sp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="#ff3d00"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:elevation="2dp">
            <LinearLayout
                android:id="@+id/ln_pass_aplikasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:padding="18dp">

                <ImageView
                    android:id="@+id/img_icon_pass_profile"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_lock_outline_black_24dp" />

                <TextView
                    android:id="@+id/tv_pass_update_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ubah Password"
                    android:fontFamily="@font/roboto"
                    android:textColor="#6D6D6D"
                    android:textSize="16sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:elevation="2dp">
            <LinearLayout
                android:id="@+id/ln_delete_aplikasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:padding="18dp">

                <ImageView
                    android:id="@+id/img_icon_delete_profile"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_icons8_trash_can" />

                <TextView
                    android:id="@+id/tv_acc_delete_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Hapus Akun"
                    android:fontFamily="@font/roboto"
                    android:textColor="#6D6D6D"
                    android:textSize="16sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:elevation="2dp">
        <LinearLayout
            android:id="@+id/ln_about_aplikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="18dp">

            <ImageView
                android:id="@+id/img_icon_info_profile"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_info_outline_black_24dp" />

            <TextView
                android:id="@+id/tv_info_aplikasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Info Aplikasi"
                android:fontFamily="@font/roboto"
                android:textColor="#6D6D6D"
                android:textSize="15sp" />
        </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:elevation="2dp">

            <Button
                android:id="@+id/btn_signout_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:text="Keluar"
                android:textColor="@color/colorAccent"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>